Add shadow to cloud. Add styles for #cloud:after and #cloud:before

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div id="cloud"></div>
+        <div id="cloud">
+            <span class="shadow"></span>
+        </div>
     </body>
 </html>
