--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div id="cloud">
-            <span class="shadow"></span>
-        </div>
+        <div id = "cloud"><span class='shadow'></span></div>
     </body>
 </html>
